--- a/index.html
+++ b/index.html
@@ -200,27 +200,26 @@
                         </div>
                      </div>
                        <!--portfolio item end-->
-                                       <!--portfolio item start-->
+                                         <!--portfolio item start-->
                      <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="" width="350px" alt="">
+                            <img src="projet3.png" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title"></h3>
+                        <h3 class="portfolio-item-title">Site E-Commerce</h3>
                         <button  type="button" class="btn view-project-btn">view project</button>
                         <div class="portfolio-item-details">
                             <div class="description">
-                                <p></p>
+                         <p>Notre projet consiste en la conception et le développement d’un site web dynamique permettant à l'utilsiateur ou le client de consulter et acheter des produits à domicile.</p>
                             </div>
                             <div class="general-info">
                                 <ul>
-                                    <li><span></span></li>
-                                    <li><span></span></li>
-                                    <li><span></span></li>
+                                    <li>créé - <span>15 Nov 2023</span></li>
+                                    <li>technologies utilisées - <span>Html, Css, Js, PHP</span></li>
+                                    <li>Rôle - <span>Frontend - Backend</span></li>
                                 </ul>
                             </div>
                         </div>
-                     </div>
-                       <!--portfolio item end-->  
+                     </div> 
                 </div>
             </div>
            </section>
